--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -271,7 +271,8 @@ endif()
 ##############################
 # plugins directives
 
-function(AddPlugin Var Name Suffix Active)
+function(AddPlugin Name Suffix Active)
+  string(TOUPPER ${Name} Var)
   if ((DEFINED ${Var} AND ${Var}) OR (NOT DEFINED ${Var} AND ${Active}))
       message(STATUS "${Var} plugin enabled")
       add_subdirectory (${Name})
@@ -300,20 +301,20 @@ else()
   message(STATUS "${ColorRed}LuaFAR and LuaMacro disabled due to -DUSELUA=${USELUA}${ColorNormal}")
 endif()
 
-AddPlugin(ALIGN         align         wide  1)
-AddPlugin(AUTOWRAP      autowrap      wide  1)
-AddPlugin(CALC          calc          wide  1)
-AddPlugin(COLORER       colorer       wide  1)
-AddPlugin(COMPARE       compare       wide  1)
-AddPlugin(DRAWLINE      drawline      wide  1)
-AddPlugin(EDITCASE      editcase      wide  1)
-AddPlugin(EDITORCOMP    editorcomp    wide  1)
-AddPlugin(FILECASE      filecase      wide  1)
-AddPlugin(INCSRCH       incsrch       wide  1)
-AddPlugin(INSIDE        inside        mb    1)
-AddPlugin(NETCFG        netcfg        wide  1)
-AddPlugin(SIMPLEINDENT  SimpleIndent  wide  1)
-AddPlugin(TMPPANEL      tmppanel      wide  1)
+AddPlugin( align         wide  1 )
+AddPlugin( autowrap      wide  1 )
+AddPlugin( calc          wide  1 )
+AddPlugin( colorer       wide  1 )
+AddPlugin( compare       wide  1 )
+AddPlugin( drawline      wide  1 )
+AddPlugin( editcase      wide  1 )
+AddPlugin( editorcomp    wide  1 )
+AddPlugin( filecase      wide  1 )
+AddPlugin( incsrch       wide  1 )
+AddPlugin( inside        mb    1 )
+AddPlugin( netcfg        wide  1 )
+AddPlugin( SimpleIndent  wide  1 )
+AddPlugin( tmppanel      wide  1 )
 
 if (NOT DEFINED MULTIARC OR MULTIARC)
     message(STATUS "MULTIARC plugin enabled")
@@ -330,7 +331,7 @@ if (NOT DEFINED MULTIARC OR MULTIARC)
 
     add_subdirectory (multiarc)
 else()
-    AddPlugin(MULTIARC multiarc mb 0)
+    AddPlugin(multiarc mb 0)
 endif()
 
 if (NOT DEFINED NETROCKS OR NETROCKS)
@@ -372,7 +373,7 @@ if (NOT DEFINED NETROCKS OR NETROCKS)
 
     add_subdirectory (NetRocks)
 else()
-    AddPlugin(NETROCKS NetRocks wide 0)
+    AddPlugin(NetRocks wide 0)
 endif()
 
 if (DEFINED VIRTUAL_PYTHON)
@@ -413,7 +414,7 @@ else()
         endif ()
 
     else()
-        AddPlugin(PYTHON python wide 0)
+        AddPlugin(python wide 0)
     endif()
 endif()
 
