Add plugin HlfViewer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -297,6 +297,7 @@ if (${USELUA})
   message(STATUS "LUAFAR and LUAMACRO enabled")
   add_subdirectory (luafar)
   add_subdirectory (luamacro)
+  AddPlugin (hlfviewer wide 1)
 else()
   message(STATUS "${ColorRed}LuaFAR and LuaMacro disabled due to -DUSELUA=${USELUA}${ColorNormal}")
 endif()
