--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -294,12 +294,12 @@ if (${USELUA})
   if (NOT LibUuid_FOUND)
     message(STATUS "Building without libuuid due to it was not found")
   endif()
-  message(STATUS "LUAFAR and LUAMACRO enabled")
+  message(STATUS "LUAFAR library enabled")
   add_subdirectory (luafar)
-  add_subdirectory (luamacro)
+  AddPlugin (luamacro wide 1)
   AddPlugin (hlfviewer wide 1)
 else()
-  message(STATUS "${ColorRed}LuaFAR and LuaMacro disabled due to -DUSELUA=${USELUA}${ColorNormal}")
+  message(STATUS "${ColorRed}LuaFAR plugins disabled due to -DUSELUA=${USELUA}${ColorNormal}")
 endif()
 
 AddPlugin( align         wide  1 )
