Redefine EXTENDED_KEY_BASE to accomodate UTF32 chars range (from far2l)

--- a/luamacro/opcodes/Makefile
+++ b/luamacro/opcodes/Makefile
@@ -1,10 +1,10 @@
 # This makefile generates the file opcodes.lua that is part of LuaMacro plugin
 
-ROOT  = $(HOME)/far2l
-FAR2L = $(ROOT)/far2l/src
+ROOT  = $(HOME)/far2m
+FAR2M = $(ROOT)/far
 
 TRG = opcodes.lua
-INC = -I$(FAR2L)/console -I$(FAR2L)/macro -I$(ROOT)/WinPort
+INC = -I$(FAR2M) -I$(FAR2M)/src/console -I$(FAR2M)/src/macro -I$(ROOT)/WinPort
 EXE = generate
 OBJ = opcodes.o
 CPPFLAGS = $(INC)
