--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,9 +47,9 @@ if(NOT "${GIT_TAG}" STREQUAL "v_${VERSION}")
     if(GIT_FOUND)
         execute_process(COMMAND "${GIT_EXECUTABLE}" show --no-patch --format=%ci HEAD
             WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}"
-            OUTPUT_VARIABLE GIT_DATE_FULL
+            OUTPUT_VARIABLE GIT_DATE
             OUTPUT_STRIP_TRAILING_WHITESPACE)
-        string(SUBSTRING ${GIT_DATE_FULL} 0 10 GIT_DATE)
+        string(SUBSTRING ${GIT_DATE} 0 10 GIT_DATE)
         execute_process(COMMAND "${GIT_EXECUTABLE}" rev-parse --short HEAD
             WORKING_DIRECTORY "${CMAKE_SOURCE_DIR}"
             OUTPUT_VARIABLE GIT_HASH
