--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -62,3 +62,8 @@ jobs:
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest -C $BUILD_TYPE
+
+    - name: Test plugin luamacro
+      working-directory: ${{github.workspace}}/build/install
+      shell: bash
+      run: ./far2m lm:test
