--- a/luamacro/opcodes/Makefile
+++ b/luamacro/opcodes/Makefile
@@ -1,24 +1,29 @@
 # This makefile generates the file opcodes.lua that is part of LuaMacro plugin
 
 ROOT  = $(HOME)/far2m
-FAR2M = $(ROOT)/far
+FAR = $(ROOT)/far
 
+SCRIPT = make_list.lua
+LUA = lua
 TRG = opcodes.lua
-INC = -I$(FAR2M) -I$(FAR2M)/src/console -I$(FAR2M)/src/macro -I$(ROOT)/WinPort
-EXE = generate
-OBJ = opcodes.o
+INP = $(FAR)/src/macro/macroopcode.hpp
+INC = -I$(FAR) -I$(FAR)/src/console -I$(FAR)/src/macro -I$(ROOT)/WinPort
 CPPFLAGS = $(INC)
 
-$(TRG): $(EXE)
-	./$<
+GEN = gen
+OBJ = $(GEN).o
+SRC = $(GEN).cpp
 
-$(EXE): $(OBJ)
+$(TRG): $(GEN)
+	./$< $@
+
+$(GEN): $(OBJ)
 	g++ -o$@ $^
 
-opcodes.cpp: make_list.lua
-	lua $^
+$(SRC): $(INP)
+	$(LUA) $(SCRIPT) $< $@
 
 clean:
-	rm $(TRG) $(EXE) $(OBJ) opcodes.cpp
+	rm $(TRG) $(GEN) $(OBJ) $(SRC)
 
 .PHONY: clean
