--- a/luamacro/src/luamacro.example.ini
+++ b/luamacro/src/luamacro.example.ini
@@ -3,8 +3,8 @@
 [General]
 
 ; Main path for macros and modules.
-; The default value is %HOME%/far2l/.config/Macros
-MainPath = %HOME%/far2l/.config/Macros
+; The default value is $(HOME)/far2m/.config/Macros
+MainPath = $(HOME)/far2m/.config/Macros
 
 ; Additional paths from which macrofiles are loaded.
 ; It is a sequence of 0 or more paths separated with semicolons.
