Split macro.cpp into 2 files (new file: macroapi.cpp)

--- a/far/CMakeLists.txt
+++ b/far/CMakeLists.txt
@@ -84,6 +84,7 @@ src/console/scrsaver.cpp
 
 src/macro/chgmmode.cpp
 src/macro/macro.cpp
+src/macro/macroapi.cpp
 src/macro/tvar.cpp
 
 src/filemask/CFileMask.cpp
