LuaFAR generic plugin: ExitFARW is always exported

--- a/luamacro/CMakeLists.txt
+++ b/luamacro/CMakeLists.txt
@@ -13,7 +13,7 @@ set_property(TARGET ${PROJECT_NAME} PROPERTY C_STANDARD 11)
 set(EXPNAMES
   CLOSEPLUGIN COMPARE CONFIGURE DELETEFILES GETFILES GETFINDDATA GETLINKTARGET
   MAYEXITFAR GETOPENPLUGININFO PROCESSHOSTFILE PROCESSEVENT PROCESSKEY PUTFILES
-  SETDIRECTORY SETFINDLIST EXITFAR OPENPLUGIN OPENFILEPLUGIN PROCESSEDITOREVENT
+  SETDIRECTORY SETFINDLIST OPENPLUGIN OPENFILEPLUGIN PROCESSEDITOREVENT
   PROCESSEDITORINPUT PROCESSVIEWEREVENT PROCESSDIALOGEVENT PROCESSCONSOLEINPUT
 )
 
