--- a/luamacro/CMakeLists.txt
+++ b/luamacro/CMakeLists.txt
@@ -11,7 +11,7 @@ add_library (${PROJECT_NAME} MODULE ${SOURCES})
 set_property(TARGET ${PROJECT_NAME} PROPERTY C_STANDARD 11)
 
 set(EXPNAMES
-  CLOSEPLUGIN COMPARE CONFIGURE DELETEFILES GETFILES GETFINDDATA GETLINKTARGET
+  CLOSEPLUGIN COMPARE CONFIGUREV3 DELETEFILES GETFILES GETFINDDATA GETLINKTARGET
   MAYEXITFAR GETOPENPLUGININFO PROCESSHOSTFILE PROCESSEVENT PROCESSKEY PUTFILES
   SETDIRECTORY SETFINDLIST OPENPLUGIN OPENFILEPLUGIN PROCESSEDITOREVENT
   PROCESSEDITORINPUT PROCESSVIEWEREVENT PROCESSDIALOGEVENT PROCESSCONSOLEINPUT
