--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -307,7 +307,7 @@ if (${USELUA})
   find_package(LibLua REQUIRED)
   find_package(LibUuid)
   if (NOT LibUuid_FOUND)
-    message(STATUS "Building without libuuid due to it was not found")
+    message(STATUS "${ColorRed}Building without LibUuid due to it was not found${ColorNormal}")
   endif()
   message(STATUS "LUAFAR library enabled")
   add_subdirectory (luafar)
