Misc changes from far2l

--- a/packaging/CMakeLists.txt
+++ b/packaging/CMakeLists.txt
@@ -20,7 +20,7 @@ ELSE(PACKAGE_DEPENDENCIES)
 ENDIF(PACKAGE_DEPENDENCIES)
 SET(PACKAGE_DEPENDENCIES "${PACKAGE_DEPENDENCIES}, libglib2.0-0, libstdc++6")
 SET(PACKAGE_DEPENDENCIES "${PACKAGE_DEPENDENCIES}, libgcc-s1 | libgcc | libgcc1")
-SET(PACKAGE_DEPENDENCIES "${PACKAGE_DEPENDENCIES}, libminizip1, libpcre3")
+SET(PACKAGE_DEPENDENCIES "${PACKAGE_DEPENDENCIES}, libminizip1, libpcre2-8-0")
 # from main project
 IF (${USEWX})
     SET(PACKAGE_DEPENDENCIES "${PACKAGE_DEPENDENCIES}, libwxgtk3.0-gtk3-0v5")
