Added LPeg and MoonScript to be available out of the box

--- a/luafar/CMakeLists.txt
+++ b/luafar/CMakeLists.txt
@@ -32,6 +32,12 @@ set(SOURCES
   src/win.c
   src/farhost.cpp
   src/farlibs.cpp
+  src/LPeg/lpcap.c
+  src/LPeg/lpcode.c
+  src/LPeg/lpcset.c
+  src/LPeg/lpprint.c
+  src/LPeg/lptree.c
+  src/LPeg/lpvm.c
 )
 
 add_library (${PROJECT_NAME} SHARED ${SOURCES})
