--- a/packaging/CMakeLists.txt
+++ b/packaging/CMakeLists.txt
@@ -46,6 +46,9 @@ endif(PCRE_FOUND)
 if(LibArchive_FOUND)
     SET(PACKAGE_DEPENDENCIES "${PACKAGE_DEPENDENCIES}, libarchive13")
 endif(LibArchive_FOUND)
+IF (${PYTHON})
+    LIST(APPEND PACKAGE_DEPENDENCIES "python3, python3-cffi")
+ENDIF()
 
 FIND_PROGRAM(DPKG_CMD dpkg)
 IF(DPKG_CMD)
