--- a/far/bootstrap/CMakeLists.txt
+++ b/far/bootstrap/CMakeLists.txt
@@ -43,14 +43,14 @@ add_custom_command(OUTPUT "${BOOTSTRAP}/copyright.inc"
     COMMAND ${M4} "${SCRIPTS}/copyright.inc.m4" > "${BOOTSTRAP}/copyright.inc"
     WORKING_DIRECTORY "${SCRIPTS}"
     DEPENDS ${DEPENDENCIES}
-    COMMENT "generating header"
+    COMMENT "generating copyright header"
 )
 
 add_custom_command(OUTPUT "${BOOTSTRAP}/farversion.inc"
     COMMAND ${M4} "${SCRIPTS}/farversion.inc.m4" > "${BOOTSTRAP}/farversion.inc"
     WORKING_DIRECTORY "${SCRIPTS}"
     DEPENDS ${DEPENDENCIES}
-    COMMENT "generating header"
+    COMMENT "generating farversion header"
 )
 
 add_custom_command(OUTPUT "${BOOTSTRAP}/farlang.templ"
@@ -64,27 +64,26 @@ add_custom_command(TARGET bootstrap
    COMMAND ${GAWK} -f "${SCRIPTS}/mkhlf.awk" "${SCRIPTS}/FarEng.hlf.m4" | ${M4} > "${BOOTSTRAP}/FarEng.hlf"
    WORKING_DIRECTORY "${SCRIPTS}"
    DEPENDS ${DEPENDENCIES}
-   COMMENT "generating lang eng"
+   COMMENT "generating help eng"
 )
-
 
 add_custom_command(TARGET bootstrap
    COMMAND ${GAWK} -f "${SCRIPTS}/mkhlf.awk" "${SCRIPTS}/FarRus.hlf.m4" | ${M4} > "${BOOTSTRAP}/FarRus.hlf"
    WORKING_DIRECTORY "${SCRIPTS}"
    DEPENDS ${DEPENDENCIES}
-   COMMENT "generating lang rus"
+   COMMENT "generating help rus"
 )
 add_custom_command(TARGET bootstrap
    COMMAND ${GAWK} -f "${SCRIPTS}/mkhlf.awk" "${SCRIPTS}/FarHun.hlf.m4" | ${M4} > "${BOOTSTRAP}/FarHun.hlf"
    WORKING_DIRECTORY "${SCRIPTS}"
    DEPENDS ${DEPENDENCIES}
-   COMMENT "generating lang hun"
+   COMMENT "generating help hun"
 )
 add_custom_command(TARGET bootstrap
    COMMAND ${GAWK} -f "${SCRIPTS}/mkhlf.awk" "${SCRIPTS}/FarUkr.hlf.m4" | ${M4} > "${BOOTSTRAP}/FarUkr.hlf"
    WORKING_DIRECTORY "${SCRIPTS}"
    DEPENDS ${DEPENDENCIES}
-   COMMENT "generating lang ukr"
+   COMMENT "generating help ukr"
 )
 add_custom_command(TARGET bootstrap
    COMMAND "${FARLNGTOOL}" generator -nc -i "${BOOTSTRAP}/lang.ini" -ol "${BOOTSTRAP}" "${BOOTSTRAP}/farlang.templ"
