--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -148,9 +148,9 @@ if(NOT GAWK)
   message(FATAL_ERROR "${ColorRed}gawk not found - please install it${ColorNormal}")
 endif ()
 
-if(${CMAKE_VERSION} VERSION_LESS "3.1.0")
-    message("Please consider to switch to newer CMake")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+if("${ICU_MODE}" STREQUAL "runtime")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DRUNTIME_ICU")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DRUNTIME_ICU")
 endif()
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -fPIC -Wno-unused-function -D_FILE_OFFSET_BITS=64") #  -fsanitize=address
