Enable printing info in GitHub test run

--- a/.github/workflows/artifacts.yml
+++ b/.github/workflows/artifacts.yml
@@ -66,4 +66,4 @@ jobs:
     - name: Test plugin luamacro
       working-directory: ${{github.workspace}}/build/install
       shell: bash
-      run: ./far2m --tty lm:test
+      run: FAR_STD=- ./far2m --tty lm:test
