--- a/luafar/SciTEDirectory.properties
+++ b/luafar/SciTEDirectory.properties
@@ -1,7 +1,7 @@
 use.tabs.*.c;*.h;*.cpp;*.hpp=1
 use.tabs.*.lua;*.moon=0
 
-dir_build=~/far2m/_build/luafar
+dir_build=~/repos/far2m/_build/luafar
 make=make -f $(dir_build)/Makefile
 
 command.compile.*.c;*.cpp=cd $(dir_build) && $(make)
