Revert last changes in plugin Inside due to crash on ShiftF1

--- a/inside/configs/plug/config.ini
+++ b/inside/configs/plug/config.ini
@@ -1,16 +1,13 @@
 [ELFRoot]
 Brief.txt=file -b $F
 Header.txt=readelf -W -h $F
-Sections.txt=readelf -W -S -d $F
+Sections.txt=readelf -W -S $F
 ProgramHeaders.txt=readelf -W -l $F
 Symbols.txt=nm $F
 SymbolsDynamic.txt=nm --dynamic $F
 
 [PE]
 Info.txt=readpe -A $F
-
-[Mach-O]
-Info.txt=exiftool $F
 
 [Disasm_20]
 PPC.s=powerpc-linux-gnu-objdump -d -w -z $F
