--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ matrix:
   include:
     - os: osx
       osx_image: xcode12
+      before_install:
+        - git clone https://github.com/microsoft/vcpkg.git
+        - ./vcpkg/bootstrap-vcpkg.sh
+        - ./vcpkg/vcpkg install aws-sdk-cpp
     - os: linux
       dist: xenial
       sudo: required
@@ -28,8 +32,12 @@ matrix:
             - m4
             - ninja-build
       env: CXX=g++-5
+      before_install:
+        - git clone https://github.com/microsoft/vcpkg.git
+        - ./vcpkg/bootstrap-vcpkg.sh
+        - ./vcpkg/vcpkg install aws-sdk-cpp
       install:
-            - if [ "$CXX" = "g++" ]; then export CXX="g++-5" CC="gcc-5"; fi
+        - if [ "$CXX" = "g++" ]; then export CXX="g++-5" CC="gcc-5"; fi
     - os: linux
       dist: xenial
       sudo: required
@@ -53,8 +61,12 @@ matrix:
             - m4
             - ninja-build
       env: CXX=g++-6
+      before_install:
+        - git clone https://github.com/microsoft/vcpkg.git
+        - ./vcpkg/bootstrap-vcpkg.sh
+        - ./vcpkg/vcpkg install aws-sdk-cpp
       install:
-            - if [ "$CXX" = "g++" ]; then export CXX="g++-6" CC="gcc-6"; fi
+        - if [ "$CXX" = "g++" ]; then export CXX="g++-6" CC="gcc-6"; fi
     - os: linux
       dist: xenial
       sudo: required
@@ -79,8 +91,12 @@ matrix:
             - m4
             - ninja-build
       env: CXX=clang++-3.6
+      before_install:
+        - git clone https://github.com/microsoft/vcpkg.git
+        - ./vcpkg/bootstrap-vcpkg.sh
+        - ./vcpkg/vcpkg install aws-sdk-cpp
       install:
-            - if [ "$CXX" = "clang++" ]; then export CXX="clang++-3.6" CC="clang-3.6"; fi
+        - if [ "$CXX" = "clang++" ]; then export CXX="clang++-3.6" CC="clang-3.6"; fi
     - os: linux
       dist: xenial
       sudo: required
@@ -106,8 +122,12 @@ matrix:
             - zlib1g-dev
             - ninja-build
       env: CXX=clang++-3.7
+      before_install:
+        - git clone https://github.com/microsoft/vcpkg.git
+        - ./vcpkg/bootstrap-vcpkg.sh
+        - ./vcpkg/vcpkg install aws-sdk-cpp
       install:
-            - if [ "$CXX" = "clang++" ]; then export CXX="clang++-3.7" CC="clang-3.7"; fi
+        - if [ "$CXX" = "clang++" ]; then export CXX="clang++-3.7" CC="clang-3.7"; fi
               
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew unlink python@2 ; fi
@@ -120,5 +140,6 @@ before_install:
 script:
   - mkdir build
   - cd build
-  - cmake -G Ninja .. && ninja -v
+  - cmake -G Ninja .. -DCMAKE_TOOLCHAIN_FILE=../vcpkg/scripts/buildsystems/vcpkg.cmake
+  - ninja -v
   - cd install && zip -r ../far2m-${TRAVIS_COMMIT}.zip * && cd -
