Move lua directory 2 levels up

--- a/far/bootstrap/CMakeLists.txt
+++ b/far/bootstrap/CMakeLists.txt
@@ -5,46 +5,11 @@ cmake_minimum_required (VERSION 3.5)
 # Cross compile of far2m requires tools to be pre-compiled for host architecture.
 set(TOOLS "${CMAKE_BINARY_DIR}/tools" CACHE STRING "")
 set(FARLNGTOOL "${TOOLS}/farlng")
+set(FARLUATOOL "${TOOLS}/lua")
 
 add_custom_target(bootstrap
   DEPENDS farlng copyright.inc farversion.inc farlang.templ
 )
-
-message(STATUS "generating Lua")
-
-add_executable (farlua
-  lua/src/lua.c
-  lua/src/lapi.c
-  lua/src/lcode.c
-  lua/src/ldebug.c
-  lua/src/ldo.c
-  lua/src/ldump.c
-  lua/src/lfunc.c
-  lua/src/lgc.c
-  lua/src/llex.c
-  lua/src/lmem.c
-  lua/src/lobject.c
-  lua/src/lopcodes.c
-  lua/src/lparser.c
-  lua/src/lstate.c
-  lua/src/lstring.c
-  lua/src/ltable.c
-  lua/src/ltm.c
-  lua/src/lundump.c
-  lua/src/lvm.c
-  lua/src/lzio.c
-  lua/src/lauxlib.c
-  lua/src/lbaselib.c
-  lua/src/ldblib.c
-  lua/src/liolib.c
-  lua/src/lmathlib.c
-  lua/src/loslib.c
-  lua/src/ltablib.c
-  lua/src/lstrlib.c
-  lua/src/loadlib.c
-  lua/src/linit.c
-)
-target_link_libraries(farlua PRIVATE m)
 
 message(STATUS "generating headers and languages")
 
@@ -74,7 +39,7 @@ set(LNGFILES
 )
 
 set(LUA
-  farlua
+  ${FARLUATOOL}
   "-eARCH=[[${CMAKE_SYSTEM_NAME} ${CMAKE_SYSTEM_PROCESSOR}]]"
   "-eMAJOR=${VERSION_MAJOR}"
   "-eMINOR=${VERSION_MINOR}"
