--- a/luafar/CMakeLists.txt
+++ b/luafar/CMakeLists.txt
@@ -1,9 +1,8 @@
 
 project(luafar)
 
-add_executable (minilua src/minilua.c)
-target_include_directories(minilua PRIVATE ${LIBLUA_INCLUDE_DIRS})
-target_link_libraries(minilua PRIVATE ${LIBLUA_LIBRARIES})
+set(TOOLS "${CMAKE_BINARY_DIR}/tools" CACHE STRING "")
+set(FARLUATOOL "${TOOLS}/lua")
 
 set(FARSRC "${CMAKE_SOURCE_DIR}/far/src")
 set(SDK "${CMAKE_SOURCE_DIR}/far/far2sdk")
@@ -11,7 +10,7 @@ set(MAKEFLAGS "${CMAKE_CURRENT_SOURCE_DIR}/src/makeflags.lua")
 
 add_custom_command(
     OUTPUT  farflags.c    # Treated as relative to CMAKE_CURRENT_BINARY_DIR
-    COMMAND minilua ${MAKEFLAGS} ${SDK} > farflags.c
+    COMMAND ${FARLUATOOL} ${MAKEFLAGS} ${SDK} > farflags.c
     DEPENDS ${SDK}/farplug-wide.h ${SDK}/farcolor.h ${SDK}/farkeys.h ${MAKEFLAGS} ${FARSRC}/DlgGuid.hpp
 )
 
