--- a/far/bootstrap/CMakeLists.txt
+++ b/far/bootstrap/CMakeLists.txt
@@ -4,11 +4,10 @@ cmake_minimum_required (VERSION 3.5)
 # This will allow specifying host far2m tools location when doing cross-platform builds.
 # Cross compile of far2m requires tools to be pre-compiled for host architecture.
 set(TOOLS "${CMAKE_BINARY_DIR}/tools" CACHE STRING "")
-set(FARLNGTOOL "${TOOLS}/farlng")
 set(FARLUATOOL "${TOOLS}/lua")
 
 add_custom_target(bootstrap
-  DEPENDS farlng copyright.inc farversion.inc farlang.templ
+  DEPENDS lua copyright.inc farversion.inc farlang.templ
 )
 
 message(STATUS "generating headers and languages")
@@ -38,7 +37,7 @@ set(LNGFILES
     "${BOOTSTRAP}/FarUkr.lng"
 )
 
-set(LUA
+set(LUACMD
   ${FARLUATOOL}
   "-eARCH=[[${CMAKE_SYSTEM_NAME} ${CMAKE_SYSTEM_PROCESSOR}]]"
   "-eMAJOR=${VERSION_MAJOR}"
@@ -48,56 +47,56 @@ set(LUA
 )
 
 add_custom_command(OUTPUT "${BOOTSTRAP}/copyright.inc"
-    COMMAND ${LUA} --copyright > "${BOOTSTRAP}/copyright.inc"
+    COMMAND ${LUACMD} --copyright > "${BOOTSTRAP}/copyright.inc"
     WORKING_DIRECTORY "${SCRIPTS}"
     DEPENDS ${DEPENDENCIES}
     COMMENT "generating copyright header"
 )
 
 add_custom_command(OUTPUT "${BOOTSTRAP}/farversion.inc"
-    COMMAND ${LUA} --farversion > "${BOOTSTRAP}/farversion.inc"
+    COMMAND ${LUACMD} --farversion > "${BOOTSTRAP}/farversion.inc"
     WORKING_DIRECTORY "${SCRIPTS}"
     DEPENDS ${DEPENDENCIES}
     COMMENT "generating farversion header"
 )
 
 add_custom_command(OUTPUT "${BOOTSTRAP}/farlang.templ"
-    COMMAND ${LUA} --farlang "${SCRIPTS}/farlang.templ.m4" > "${BOOTSTRAP}/farlang.templ"
+    COMMAND ${LUACMD} --farlang "${SCRIPTS}/farlang.templ.m4" > "${BOOTSTRAP}/farlang.templ"
     WORKING_DIRECTORY "${SCRIPTS}"
     DEPENDS ${DEPENDENCIES}
     COMMENT "generating language template"
 )
 
 add_custom_command(TARGET bootstrap
-   COMMAND ${LUA} --mkhlf "${SCRIPTS}/FarEng.hlf.m4" > "${BOOTSTRAP}/FarEng.hlf"
+   COMMAND ${LUACMD} --mkhlf "${SCRIPTS}/FarEng.hlf.m4" > "${BOOTSTRAP}/FarEng.hlf"
    WORKING_DIRECTORY "${SCRIPTS}"
    DEPENDS ${DEPENDENCIES}
    COMMENT "generating help eng"
 )
 
 add_custom_command(TARGET bootstrap
-   COMMAND ${LUA} --mkhlf "${SCRIPTS}/FarRus.hlf.m4" > "${BOOTSTRAP}/FarRus.hlf"
+   COMMAND ${LUACMD} --mkhlf "${SCRIPTS}/FarRus.hlf.m4" > "${BOOTSTRAP}/FarRus.hlf"
    WORKING_DIRECTORY "${SCRIPTS}"
    DEPENDS ${DEPENDENCIES}
    COMMENT "generating help rus"
 )
 
 add_custom_command(TARGET bootstrap
-   COMMAND ${LUA} --mkhlf "${SCRIPTS}/FarHun.hlf.m4" > "${BOOTSTRAP}/FarHun.hlf"
+   COMMAND ${LUACMD} --mkhlf "${SCRIPTS}/FarHun.hlf.m4" > "${BOOTSTRAP}/FarHun.hlf"
    WORKING_DIRECTORY "${SCRIPTS}"
    DEPENDS ${DEPENDENCIES}
    COMMENT "generating help hun"
 )
 
 add_custom_command(TARGET bootstrap
-   COMMAND ${LUA} --mkhlf "${SCRIPTS}/FarUkr.hlf.m4" > "${BOOTSTRAP}/FarUkr.hlf"
+   COMMAND ${LUACMD} --mkhlf "${SCRIPTS}/FarUkr.hlf.m4" > "${BOOTSTRAP}/FarUkr.hlf"
    WORKING_DIRECTORY "${SCRIPTS}"
    DEPENDS ${DEPENDENCIES}
    COMMENT "generating help ukr"
 )
 
 add_custom_command(TARGET bootstrap
-   COMMAND "${FARLNGTOOL}" generator -nc -i "${BOOTSTRAP}/lang.ini" -ol "${BOOTSTRAP}" "${BOOTSTRAP}/farlang.templ"
+   COMMAND "${FARLUATOOL}" "${SCRIPTS}/farlang.lua" -i "${BOOTSTRAP}/farlang.templ" -o "${BOOTSTRAP}"
    WORKING_DIRECTORY "${BOOTSTRAP}"
    DEPENDS "${BOOTSTRAP}/farlang.templ"
    COMMENT "generating languages"
