Add a missing dependency

--- a/luamacro/CMakeLists.txt
+++ b/luamacro/CMakeLists.txt
@@ -62,6 +62,7 @@ function(Generate_Constants)
   add_custom_command(OUTPUT ${SRC}
                      COMMAND ${FARLUATOOL} ${SCRIPT} ${SRC} ${INPUT}
                      DEPENDS ${INPUT}
+                     DEPENDS ${FARLUATOOL}
                      )
 
   add_executable(${GEN} ${SRC})
