--- a/luafar/CMakeLists.txt
+++ b/luafar/CMakeLists.txt
@@ -12,6 +12,7 @@ add_custom_command(
     OUTPUT  farflags.c    # Treated as relative to CMAKE_CURRENT_BINARY_DIR
     COMMAND ${FARLUATOOL} ${MAKEFLAGS} ${SDK} > farflags.c
     DEPENDS ${SDK}/farplug-wide.h ${SDK}/farcolor.h ${SDK}/farkeys.h ${MAKEFLAGS} ${FARSRC}/DlgGuid.hpp
+    DEPENDS ${FARLUATOOL}
 )
 
 set(SOURCES
