--- a/luamacro/CMakeLists.txt
+++ b/luamacro/CMakeLists.txt
@@ -91,5 +91,6 @@ endforeach()
 set (MAKELANG ${FARLUATOOL} ${CMAKE_SOURCE_DIR}/luafar/lua_share/makelang.lua)
 set (TEMPL    ${CMAKE_CURRENT_SOURCE_DIR}/src/lm_lang.templ)
 add_custom_target(${PROJECT_NAME}_lang ALL
-  ${MAKELANG} ${TEMPL} ${INSTALL_DIR}/plug
+  COMMAND ${MAKELANG} ${TEMPL} ${INSTALL_DIR}/plug
+  DEPENDS ${FARLUATOOL}
 )
